Instead of giving the StreamService a generic ProcessBuilder create a new class Worker that represents a Worker process but has not necessarily been started yet.
Also, give each worker a unique id and send it as part of the worker spec.
-------------
Created by MOE: http://code.google.com/p/moe-java
MOE_MIGRATED_REVID=52574417